--- a/CIFAR10_VGG16_pytorch.ipynb
+++ b/CIFAR10_VGG16_pytorch.ipynb
@@ -6,7 +6,8 @@
       "name": "CIFAR10_VGG16_pytorch.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPHLlPudG5ROM4DXYVVdMFP",
+      "mount_file_id": "1WWVuCGaDJi6saCBv4fJWLLx7e-ztk58n",
+      "authorship_tag": "ABX9TyMsQfG9z3nXTaqpoJwMitll",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +51,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TGL-CbXmrjyV",
-        "outputId": "63b8cab4-c6ef-4bc6-c86b-8787162ae71c"
+        "outputId": "9bc2f803-d13e-48fe-ea91-55b80ac6bb59"
       },
       "source": [
         "num_workers = 1\n",
@@ -66,16 +67,17 @@
         "train_data = datasets.CIFAR10('train_data', train=True, \n",
         "                              download=True, transform=transform)\n",
         "test_data = datasets.CIFAR10('test_data', train=False,\n",
-        "                             download=False, transform=transform)\n",
+        "                             download=True, transform=transform)\n",
         "\n",
         "classes = ['airplane', 'automobile', 'bird', 'cat', 'deer',\n",
         "           'dog', 'frog', 'horse', 'ship', 'truck']"
       ],
-      "execution_count": 19,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Files already downloaded and verified\n",
             "Files already downloaded and verified\n"
           ],
           "name": "stdout"
@@ -415,7 +417,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54b6101d-7f8c-4a3b-b39e-ac3c6a711ee1"
+        "outputId": "3ff1292e-c879-4e69-f17e-9c86c52b6f5c"
       },
       "source": [
         "test_loss = 0.0\n",
@@ -451,7 +453,7 @@
         "    100. * np.sum(class_correct) / np.sum(class_total),\n",
         "    np.sum(class_correct), np.sum(class_total)))"
       ],
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +483,13 @@
         "id": "KO6SxLhs9GDV"
       },
       "source": [
-        " "
+        " image = '/content/drive/MyDrive/test_vgg16/bird.jpg'\n",
+        " transform = transforms.Compose([\n",
+        "       transforms.ToTensor(),\n",
+        "       transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+        "       ])\n",
+        "\n",
+        " predict = model(image)"
       ],
       "execution_count": null,
       "outputs": []
